--- a/yo/app/index.html
+++ b/yo/app/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-view class="container bg-darkCyan"></div>
+    <div ng-view class="container bg-dark"></div>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 	<script>
@@ -103,7 +103,6 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/main.js"></script>
 	<script src="scripts/directives/maintitle.js"></script>
-	<script src="/bpm-purchase-request-steel/scripts/scripts.e2d4b438.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
